login image + fix topbar on ios

--- a/Source/eSoRP/eSoRP/styles/main.css
+++ b/Source/eSoRP/eSoRP/styles/main.css
@@ -641,6 +641,15 @@ background-color: #A36A57;
 	height: 1.6em;
 	margin-left: -.77em;
 }
-.km-ios .km-header,.km-ios .km-drawer {
+.km-on-ios .km-header,.km-ios .km-drawer {
 	margin-top: 20px;
+}
+#welcome .km-content {
+	background-color:transparent;
+}
+#welcome {
+	background-image: url(images/blured-fairshare.jpg);
+	background-position: -80px 0;
+	background-size: auto 100%;
+	-webkit-background-size: auto 100%;
 }
